--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,15 @@
 name: Generate Test and Coverage Artifacts
-on: [push]
+on: push
 jobs:
-  my-job:
-    name: Run MATLAB Tests
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
-      - name: Set up MATLAB
-        uses: matlab-actions/setup-matlab@v2
-      - name: Run tests
-        uses: matlab-actions/run-tests@v2
+      - uses: actions/checkout@v4
+      - uses: matlab-actions/setup-matlab@v2
+      - uses: matlab-actions/run-tests@v2
         with:
-          test-results-junit: test-results/results.xml
-          code-coverage-cobertura: code-coverage/coverage.xml
-      - name: Upload results to Codecov
-        uses: codecov/codecov-action@v4
+          source-folder: source
+          code-coverage-cobertura: coverage.xml
+      - uses: codecov/codecov-action@v4
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+          file: coverage.xml
