--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Set up MATLAB
         uses: matlab-actions/setup-matlab@v2
-      - name: Run tests
+      - name: Run Matlab tests
         uses: matlab-actions/run-tests@v2
         with:
           test-results-junit: test-results/results.xml
@@ -16,4 +16,13 @@ jobs:
       - uses: codecov/codecov-action@v4
         with:
           file: coverage.xml
-
+          name: pythonTestWorkflow
+      - name: Run python tests
+        run: pytest --cov .
+      - name: Upload coverage reports to Codecov
+        run: |
+          curl -Os https://cli.codecov.io/latest/linux/codecov
+          chmod +x codecov
+          ./codecov --verbose upload-process --fail-on-error -t ${{ secrets.CODECOV_TOKEN }} -n 'service'-${{ github.run_id }} -F service -f coverage-service.xml
+  
+      
