--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,8 @@ jobs:
         with:
           file: coverage.xml
           name: pythonTestWorkflow
+      - name: Install pytest
+        run: run pip install pytest-cov
       - name: Run python tests
         run: pytest --cov .
       - name: Upload coverage reports to Codecov
